# copier-base-template

./: .coderabbit.yaml  .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  copier.yaml  mutex_queue  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  ruff-test.toml  ruff.toml
.beads/: .gitignore  metadata.json
.claude/.beads/: .gitignore  config.yaml  metadata.json
.claude/settings/: hooks.jsonc
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer-to-instantiate-template.json  devcontainer.json  docker-compose.yml  install-ci-tooling.py  install-ci-tooling.sh  manual-setup-deps.sh  on-create-command.sh  post-start-command.sh  windows-host-helper.sh
.github/workflows/: checks.yaml  ci.yaml  hash_git_files.py  tag-on-merge.yaml
copier_tasks/: remove_precommit_hook.py
extensions/: context.py
src/: hash_git_files.py
template/: .coderabbit.yaml  README.md  README.md.jinja-base  copier.yaml.jinja-base  copier.yml.jinja-base  pylintrc.toml  pyproject.toml.jinja-base  ruff-non-src.toml  sh.bat  ty.toml
template/.devcontainer/: create-aws-profile.sh  create-aws-profile.sh.jinja-base  devcontainer.json.jinja-base  docker-compose.yml.jinja-base  envs.json  initialize-command.sh  install-ci-tooling.py.jinja-base  install-ci-tooling.sh.jinja-base  manual-setup-deps.py  manual-setup-deps.sh.jinja-base  merge-claude-settings.sh  on-create-command-boilerplate.sh  on-create-command.sh.jinja-base  post-start-command.sh.jinja-base  windows-host-helper.sh
template/extensions/: context.py.jinja-base
(+78 files in other folders)
