[project]
name = "copier-base-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=4.0.1",
    "pyright[nodejs]>=1.1.407",
    "ty>=0.0.2",
    "copier==9.11.0",
    "copier-template-extensions==0.3.3"
]
